# ROCC

./: docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile  diesel.toml  dump_user.dump
backend/migrations/2024-08-27-134124_first_migrate/: up.sql
backend/src/: main.rs  schema.rs  tools.rs
backend/src/core/database/: db_core.rs  mod.rs
backend/src/functions/: custom_errors.rs
backend/src/logger/: logger.rs
backend/src/middleware/: mod.rs
backend/src/middleware/api/: mod.rs  utopia_swagger.rs
backend/src/middleware/auth/: api.rs  api_models.rs  auth_middleware.rs  claims.rs  handlers.rs  manager.rs  mod.rs  models.rs  utils.rs
backend/src/middleware/profile/: handlers.rs  manager.rs  mod.rs  models.rs
backend/src/middleware/workspace/: handler.rs  manager.rs  mod.rs  model.rs  utils.rs
dumps/: dump_user.dump
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  api.js  index.js
frontend/src/components/: Header.jsx  Login.js  ProfilePage.js  Registration.js
frontend/src/components/Shared/: Button.js  Container.js  Form.js  Input.js
frontend/src/styles/: App.css  Header.css  index.css
