[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-http = "3.9.0"
actix-service = "2.0.2"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
anyhow = "1.0.86"
async-std = "1.12.0"
bcrypt = "0.15.1"
bytes = "1.7.1"
chrono = {version ="0.4.38",  features = ["serde"] }
colored = "2.1.0"
diesel = {version="2.2.3", features = ["postgres", "r2d2"]}
dotenvy = "0.15.7"
fern = "0.6.2"
futures = "0.3.30"
futures-util = "0.3.30"
hmac = "0.12.1"
jsonwebtoken = "9.3.0"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
tokio = { version = "1.39.3", features = ["full"] }
tokio-postgres = {version = "0.7.10",features = ["with-chrono-0_4"]}
tokio-util = "0.7.11"
utc = "0.2.0"
utoipa = "4.2.3"
utoipa-swagger-ui = "7.1.0"
uuid = {version="1.10.0",features = ["v4"] }

